CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

ADD_SUBDIRECTORY(googletest)

SET(CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES(googletest/include)

ADD_EXECUTABLE(test
    src/unit_test.cpp
)

ADD_EXECUTABLE(lab
    src/main.cpp
)


TARGET_LINK_LIBRARIES(test gtest)
TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)